tests/baselines/reference/jsFileCompilationImportEqualsSyntax.errors.txt
tests/cases/compiler/a.js(1,1): error TS8002: 'import ... =' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    import a = b;
    ~~~~~~~~~~~~~
!!! error TS8002: 'import ... =' can only be used in a .ts file.